tests/paczka1/small_fuzzy/26008375.err
Error in line 3: S568 S617 68,7
Error in line 9: S568 A559 27,2
